# red7

./: .gitignore  CMakeLists.txt  notes.md  red7.cpp  red7.h
tests/: CMakeLists.txt  red7.t.cpp
